# node-kayles

./: .gitignore  Cargo.toml  README.md  bench.py  deps.sh  format.py  pgo.sh  release.sh  setup.sh  visualize.py
.github/workflows/: test.yaml
haskell-impls/: lattice.hs  queens.hs
scripts/: latice_3_n.sh  petersen_n_2.sh  queens.sh
src/: .main.rs.swp  main.rs
tools/: bench.py  lattice.py  petersen.py  prettyprint.py  queen.py  queens.py  serialize.py
