[package]
name = "non-attacking-queens"
version = "0.1.0"
authors = ["InnovativeInventor <root@max.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph={git="https://github.com/InnovativeInventor/petgraph.git", branch = "master", version="0.5.3"}
ndarray="0.15.1"
structopt="0.3.21"
itertools="0.10.0"

[profile.release]
# debug = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
