[package]
name = "non-attacking-queens"
version = "0.1.0"
authors = ["InnovativeInventor <root@max.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# petgraph = { version = "0.5.3", features = ["serde-1"], git = "https://github.com/InnovativeInventor/petgraph", branch = "origin/serde"}
petgraph = { version = "0.5.1", features = ["serde-1"]}
ndarray = "0.15.1"
structopt = "0.3.21"
itertools = "0.10.0"
# jemallocator = "0.3.2"
mimalloc = { version = "*", default-features = false }
serde_cbor = "0.11.1"
serde = { version = "1.0.125", features = ["derive"] }

[profile.release]
# debug = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
