[package]
name = "non-attacking-queens"
version = "0.1.1"
authors = ["InnovativeInventor <root@max.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# petgraph = { version = "0.5.3", features = ["serde-1"], git = "https://github.com/InnovativeInventor/petgraph", branch = "origin/serde"}
petgraph = { version = "0.5.1", features = ["serde-1"]}
ndarray = "0.15.1"
structopt = "0.3.21"
itertools = "0.10.0"
mimalloc = { version = "*", default-features = false }
fnv = "*"
serde_json = "1.0.59"
serde = { version = "1.0.125", features = ["derive"] }

[profile.release]
# debug = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
